[package]
name = "solana-banks-client"
description = "Solana banks client"
documentation = "https://docs.rs/solana-banks-client"
version = "1.17.0"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana"
homepage = "https://solanalabs.com/"
license = "Apache-2.0"
edition = "2021"

[dependencies]
borsh = { workspace = true }
futures = { workspace = true }
solana-banks-interface = { workspace = true }
solana-program = { workspace = true }
solana-sdk = { workspace = true }
tarpc = { workspace = true, features = ["full"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-serde = { workspace = true, features = ["bincode"] }

[dev-dependencies]
solana-banks-server = { workspace = true }
solana-runtime = { workspace = true }

[lib]
crate-type = ["lib"]
name = "solana_banks_client"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
