[package]
name = "solana-dos"
publish = false
description = "Tool to send various requests to cluster in order to evaluate the effect on performance"
version = "1.17.0"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana"
homepage = "https://solanalabs.com/"
license = "Apache-2.0"
edition = "2021"

[dependencies]
bincode = { workspace = true }
clap = { version = "3.1.5", features = ["derive", "cargo"] }
crossbeam-channel = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
rand = "0.8"
serde = { workspace = true }
solana-bench-tps = { workspace = true }
solana-client = { workspace = true }
solana-core = { workspace = true }
solana-faucet = { workspace = true }
solana-gossip = { workspace = true }
solana-logger = { workspace = true }
solana-measure = { workspace = true }
solana-net-utils = { workspace = true }
solana-perf = { workspace = true }
solana-rpc = { workspace = true }
solana-rpc-client = { workspace = true }
solana-sdk = { workspace = true }
solana-streamer = { workspace = true }
solana-tpu-client = { workspace = true }
solana-version = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dev-dependencies]
solana-local-cluster = { workspace = true }
solana-thin-client = { workspace = true }
