[package]
name = "solana-genesis-utils"
description = "Solana Genesis Utils"
documentation = "https://docs.rs/solana-download-utils"
version = "1.17.0"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana"
homepage = "https://solanalabs.com/"
license = "Apache-2.0"
edition = "2021"

[dependencies]
log = { workspace = true }
solana-download-utils = { workspace = true }
solana-rpc-client = { workspace = true }
solana-runtime = { workspace = true }
solana-sdk = { workspace = true }

[lib]
crate-type = ["lib"]
name = "solana_genesis_utils"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
