[package]
name = "solana-logger"
description = "Solana Logger"
documentation = "https://docs.rs/solana-logger"
version = "1.17.0"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana"
homepage = "https://solanalabs.com/"
license = "Apache-2.0"
edition = "2021"

[dependencies]
env_logger = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }

[lib]
name = "solana_logger"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
