[package]
name = "solana-metrics"
description = "Solana Metrics"
documentation = "https://docs.rs/solana-metrics"
version = "1.17.0"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana"
homepage = "https://solanalabs.com/"
license = "Apache-2.0"
edition = "2021"

[dependencies]
crossbeam-channel = { workspace = true }
gethostname = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "brotli", "deflate", "gzip", "rustls-tls", "json"] }
solana-sdk = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
rand = "0.8"
serial_test = { workspace = true }

[lib]
name = "solana_metrics"

[[bench]]
name = "metrics"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
