[package]
name = "solana-net-shaper"
description = "The solana cluster network shaping tool"
publish = false
version = "1.17.0"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana"
homepage = "https://solanalabs.com/"
license = "Apache-2.0"
edition = "2021"

[dependencies]
clap = { version = "3.1.5", features = ["cargo"] }
rand = "0.8"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
solana-logger = { workspace = true }

[[bin]]
name = "solana-net-shaper"
path = "src/main.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
