[package]
name = "solana-notifier"
description = "Solana Notifier"
documentation = "https://docs.rs/solana-notifier"
version = "1.17.0"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana"
homepage = "https://solanalabs.com/"
license = "Apache-2.0"
edition = "2021"

[dependencies]
log = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "brotli", "deflate", "gzip", "rustls-tls", "json"] }
serde_json = { workspace = true }
solana-sdk = { workspace = true }

[lib]
name = "solana_notifier"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
