[package]
name = "solana-poh-bench"
documentation = "https://docs.rs/solana-poh-bench"
publish = false
version = "1.17.0"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana"
homepage = "https://solanalabs.com/"
license = "Apache-2.0"
edition = "2021"

[dependencies]
clap = { version = "3.1.5", features = ["cargo"] }
log = { workspace = true }
rand = "0.8"
rayon = { workspace = true }
solana-entry = { workspace = true }
solana-logger = { workspace = true }
solana-measure = { workspace = true }
solana-perf = { workspace = true }
solana-sdk = { workspace = true }
solana-version = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
